Fix spacing for daniel

--- a/packages/extension/src/pages/nft/style.module.scss
+++ b/packages/extension/src/pages/nft/style.module.scss
@@ -101,7 +101,7 @@
   }
   .buttonActive {
     margin-top: 16px;
-    margin-bottom: 8px;
+    margin-bottom: 16px;
     width: 328px;
     height: 38px;
     display: flex;
